--- a/home-1.html
+++ b/home-1.html
@@ -64,5 +64,50 @@
             </div>
         </div>
     </section>
+
+    <!-- Footer  -->
+    <footer class="footer footer-dark">
+        <div class="container footer-container">
+            <div class="row">
+                <div class="col-lg-5">
+                    <div class="footer-left-div">
+                        <a class="footer-logo" href="javascript:void(0)"><img src="images/logo.png" alt="Flipguardian" class="footer-logo-img"></a>
+                        <div class="footer-contect-link"><i class="fa-solid fa-location-dot"></i> <span><p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Inventore, ipsam</p></span></div>
+                        <a href="tel:2505512025" class="footer-contect-link"><i class="fa-solid fa-phone"></i> <span>250-551-2025</span></a>
+                        <a href="mailto:website@gmail.com" class="footer-contect-link"><i class="fa-solid fa-envelope"></i> <span>website@gmail.com</span></a>
+                        <div class="footer-social-link">
+                            <a href="javascript:void(0)" class="footer-social-media-link"><i class="fa-brands fa-instagram icon"></i></a>
+                            <a href="javascript:void(0)" class="footer-social-media-link"><i class="fa-brands fa-x-twitter icon"></i></a>
+                            <a href="javascript:void(0)" class="footer-social-media-link"><i class="fa-brands fa-linkedin icon"></i></a>
+                            <a href="javascript:void(0)" class="footer-social-media-link"><i class="fa-brands fa-facebook icon"></i></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-7 mt-lg-0 mt-4">
+                    <div class="footer-link-div">
+                        <h4 class="footer-title">Quick Links</h4>
+                        <ul class="footer-nav p-0">
+                            <li class="nav-item"><a class="nav-link" href="javascript:void(0)">Individual</a></li>                                   
+                            <li class="nav-item"><a class="nav-link" href="javascript:void(0)">Teams</a></li>                                   
+                            <li class="nav-item"><a class="nav-link" href="javascript:void(0)">Marketplace</a></li>                                   
+                            <li class="nav-item"><a class="nav-link" href="javascript:void(0)">Pricing</a></li>                                   
+                            <li class="nav-item"><a class="nav-link" href="javascript:void(0)">Resources</a></li>                                   
+                            <li class="nav-item"><a class="nav-link" href="javascript:void(0)">Contact Us</a></li>                                   
+                        </ul>                                   
+                    </div>
+                </div>
+              </div>
+                <div class="p-text-div">
+                    <p class="p-text">FlipGuardian is strictly for personal/commercial use only. It can be used in conjunction with the content you/your company owns. It cannot be used on behalf of a 3rd party, including clients and/or customers. If you have clients who would benefit from our software we recommend creating a standalone account for each client as required or referring the platform to them to purchase directly via your affiliate link.  Anyone found using their account in breach of this policy will forfeit their account.</p>
+                    <p class="p-text">All trademarks and logos are the property of their respective owners. This site and FlipGuardian software are not associated, affiliated, endorsed, or sponsored by any business listed on this page nor have they been reviewed tested or certified by any other company listed on this page.</p>
+                </div>
+            </div>
+        
+            <div class="copyright">
+                <div class="container"> 
+                    <p class="copyright-content"><span>Copyright - FlipGuardian.com a Synthium Health, Inc. Website - All Rights Reserved</span></p>
+                </div>
+            </div>
+    </footer>
 </body>
 </html>
