Feature and testimonials section

--- a/home-1.html
+++ b/home-1.html
@@ -65,6 +65,223 @@
         </div>
     </section>
 
+    <!-- Feature Highlights Section  -->
+    <section class="feature-sec section-padding">
+        <div class="container">
+            <div class="common-heading">
+                <h3 class="subheading">Explore Top Features</h3>
+                <h5 class="sec-title">Feature Highlights</h5>
+            </div>
+
+            <div class="row feature-row">
+                <div class="col-lg-4 col-sm-6 card-col">
+                    <div class="feature-card">
+                        <div class="icon-div">
+                            <img src="images/icons/individual-publishing.png" alt="Individual Publishing" class="icon">
+                        </div>
+                        <div class="text-content">
+                            <h5 class="heading">Individual Publishing</h5>
+                            <p class="p-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa excepturi autem impedit, cupiditate asperiores temporibus.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-sm-6 card-col">
+                    <div class="feature-card">
+                        <div class="icon-div">
+                            <img src="images/icons/timer.png" alt="Design and publish flipbooks in minutes" class="icon">
+                        </div>
+                        <div class="text-content">
+                            <h5 class="heading">Design and publish flipbooks in minutes</h5>
+                            <p class="p-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa excepturi autem impedit, cupiditate asperiores temporibus.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-sm-6 card-col">
+                    <div class="feature-card">
+                        <div class="icon-div">
+                            <img src="images/icons/data-sharing.png" alt="Embed and share anywhere" class="icon">
+                        </div>
+                        <div class="text-content">
+                            <h5 class="heading">Embed and share anywhere</h5>
+                            <p class="p-text">Lorem ipsum dolor sit amet</p>
+                            <div class="list-div">
+                                <div class="list"><i class="fa-solid fa-check icon"></i>Lorem ipsum dolor</div>
+                                <div class="list"><i class="fa-solid fa-check icon"></i>Lorem ipsum dolor</div>
+                                <div class="list"><i class="fa-solid fa-check icon"></i>Lorem ipsum dolor</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-4 col-sm-6 card-col">
+                    <div class="feature-card">
+                        <div class="icon-div">
+                            <img src="images/icons/support.png" alt="Team Collaboration" class="icon">
+                        </div>
+                        <div class="text-content">
+                            <h5 class="heading">Team Collaboration</h5>
+                            <p class="p-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa excepturi autem impedit, cupiditate asperiores temporibus.</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-4 col-sm-6 card-col">
+                    <div class="feature-card">
+                        <div class="icon-div">
+                            <img src="images/icons/workflow.png" alt="Real-time co-editing and approval workflows" class="icon">
+                        </div>
+                        <div class="text-content">
+                            <h5 class="heading">Real-time co-editing and approval workflows</h5>
+                            <div class="list-div">
+                                <div class="list"><i class="fa-solid fa-check icon"></i>Lorem ipsum dolor</div>
+                                <div class="list"><i class="fa-solid fa-check icon"></i>Lorem ipsum dolor</div>
+                                <div class="list"><i class="fa-solid fa-check icon"></i>Lorem ipsum dolor</div>
+                            </div> 
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-sm-6 card-col">
+                    <div class="feature-card">
+                        <div class="icon-div">
+                            <img src="images/icons/report.png" alt="Activity insights and reports" class="icon">
+                        </div>
+                        <div class="text-content">
+                            <h5 class="heading">Activity insights and reports</h5>
+                            <p class="p-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa excepturi autem impedit, cupiditate asperiores temporibus.</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-4 col-sm-6 card-col">
+                    <div class="feature-card">
+                        <div class="icon-div">
+                            <img src="images/icons/shopping-cart.png" alt="Marketplace Monetization" class="icon">
+                        </div>
+                        <div class="text-content">
+                            <h5 class="heading">Marketplace Monetization</h5>
+                            <p class="p-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa excepturi autem impedit, cupiditate asperiores temporibus.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-sm-6 card-col">
+                    <div class="feature-card">
+                        <div class="icon-div">
+                            <img src="images/icons/global.png" alt="Sell content to a global audience" class="icon">
+                        </div>
+                        <div class="text-content">
+                            <h5 class="heading">Sell content to a global audience</h5>
+                            <p class="p-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.  cupiditate asperiores temporibus.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-sm-6 card-col">
+                    <div class="feature-card">
+                        <div class="icon-div">
+                            <img src="images/icons/sales.png" alt="Analytics on sales and downloads" class="icon">
+                        </div>
+                        <div class="text-content">
+                            <h5 class="heading">Analytics on sales and downloads</h5>
+                            <p class="p-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-4 col-sm-6 card-col">
+                    <div class="feature-card">
+                        <div class="icon-div">
+                            <img src="images/icons/data-processing.png" alt="Integration with external platforms" class="icon">
+                        </div>
+                        <div class="text-content">
+                            <h5 class="heading">Integration with external platforms</h5>
+                            <div class="list-div">
+                                <div class="list"><i class="fa-solid fa-check icon"></i>Lorem ipsum dolor</div>
+                                <div class="list"><i class="fa-solid fa-check icon"></i>Lorem ipsum dolor</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Testimonials Section  -->
+    <section class="testimonials-sec section-padding">
+        <div class="container">
+            <div class="common-heading">
+                <h3 class="subheading">See What People Are Saying</h3>
+                <h5 class="sec-title">Testimonials</h5>
+            </div>
+
+            <div class="row testimonials-row">
+                <div class="col-lg-6 testimonials-col">
+                    <div class="testimonials-card">
+                        <div class="icon-div">
+                            <div class="icon"><i class="fa-solid fa-quote-right icn"></i></div>
+                        </div>
+                        <div class="text-content">
+                            <span class="bold-quotes">"eBooks on Super Power Mode"</span>
+                            <p class="message">
+                                Let's be honest. Everyone has a few hundred ebooks lying down, getting dust on hard drivers without any meaning. With FlipGuardian, you can give them a new purpose in 3 steps.
+                                <span>1- Choose your ebook.</span>
+                                <span>2- Upload and activate the campaign.</span>
+                                <span>3- Share, promote, sell, or embed.</span>
+                                I have been looking for something like this for some time. Love it!
+                            </p>
+                        </div>
+                        <div class="user-info">
+                            <img src="images/user1.jpg" alt="DANIEL POPA" class="img-fluid user">
+                            <div class="name-content">
+                                <h5 class="name">DANIEL POPA</h5>
+                                <h5 class="designation">Marketing Specialist</h5>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-6 testimonials-col">
+                    <div class="testimonials-card">
+                        <div class="icon-div">
+                            <div class="icon"><i class="fa-solid fa-quote-right icn"></i></div>
+                        </div>
+                        <div class="text-content">
+                            <span class="bold-quotes">"...beyond impressed with FlipGuardian"</span>
+                            <p class="message">
+                                I am beyond impressed with FlipGuardian and the incredible value it brings to my website and content marketing strategy. This platform has completely transformed the way I engage with my audience and deliver captivating content.
+                                <span>With FlipGuardian, I can effortlessly embed attention-grabbing flipbooks directly into my website and blog content. This feature has allowed me to share my content more effectively and generate leads with ease.. The versatility and ease of use have truly been game-changers for me. And the support provided was terrific.</span>
+                            </p>
+                        </div>
+                        <div class="user-info">
+                            <img src="images/user2.jpg" alt="JULIUS PO" class="img-fluid user">
+                            <div class="name-content">
+                                <h5 class="name">JULIUS PO</h5>
+                                <h5 class="designation">Connectsaas.com</h5>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-12 testimonials-col">
+                    <div class="testimonials-card">
+                        <div class="icon-div">
+                            <div class="icon"><i class="fa-solid fa-quote-right icn"></i></div>
+                        </div>
+                        <div class="text-content">
+                            <span class="bold-quotes">"FlipGuardian is a highly effective tool..."</span>
+                            <p class="message">FlipGuardian is a highly effective tool for lead generation and content access control. Its user-friendly interface allows for easy campaign setup in a matter of minutes. The exceptional customer service promptly resolves any issues, making it an ideal choice for business growth and scaling. I highly recommend this software.</p>
+                        </div>
+                        <div class="user-info">
+                            <img src="images/user3.jpg" alt="PERRY HAMPTON" class="img-fluid user">
+                            <div class="name-content">
+                                <h5 class="name">PERRY HAMPTON</h5>
+                                <h5 class="designation">HamptonNetwork.com</h5>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- Footer  -->
     <footer class="footer footer-dark">
         <div class="container footer-container">
