--- a/home-1.html
+++ b/home-1.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Home 1 - Flipguardian</title>
+        <title>Home - Flipguardian</title>
         <link rel="icon" type="image/x-icon" href="images/favicon.png">
 
         <!-- Fonts  -->
@@ -22,7 +22,7 @@
         <script src="script.js"></script>
     </head>
 <body>
-    <nav class="navbar fg-navbar navbar-expand-lg" id="navMain">
+    <nav class="navbar fg-navbar navbar-expand-xl" id="navMain">
         <a class="navbar-brand" href="home-1.html"><img src="images/logo.png" alt="Flipguardian" class="brand-logo-img"></a>
         <button type="button" class="btn navbar-toggler border-0 toggle-menu" onclick="toggleSlide()" id="slide-toggle">
             <span class="navbar-dash"></span>
@@ -59,6 +59,42 @@
                 <div class="col-lg-6 center-col">
                     <div class="img-div">
                         <img src="images/hero-vector.png" alt="The Workflow Platform For Any Size Business" class="img-fluid banner-img">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Pricing Section Section  -->
+    <section class="section-padding pricing-sec">
+        <div class="container">
+            <div class="row pricing-row">
+                <div class="col-lg-6 pricing-col">
+                    <div class="pricing-card">
+                        <div class="text-content">
+                            <h5 class="heading">Individual</h5>
+                            <p class="p-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe, ad! Est nulla fugit amet nostrum!</p>
+                            <a href="javascript:void(0)": class="secondary-btn">Start Now</a>
+                        </div>
+                        <div class="price-div">
+                            <span class="perc">0.5%</span>
+                            <span class="p-text">on recurring charges</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-6 pricing-col">
+                    <div class="pricing-card">
+                        <div class="text-content">
+                            <h5 class="heading">Teams</h5>
+                            <p class="p-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe, ad! Est nulla fugit amet nostrum!</p>
+                            <a href="javascript:void(0)": class="secondary-btn">Start Now</a>
+                        </div>
+                        <div class="price-div">
+                            <span class="p-text">Starts at</span>
+                            <span class="perc">0.5%</span>
+                            <span class="p-text">on recurring charges</span>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -204,6 +240,22 @@
         </div>
     </section>
 
+    <!-- Call to action button  -->
+    <section class="call-action-sec section-padding">
+        <h4 class="stroke-text">Flipguardian</h4>
+        <img src="images/call-to-action-bg.jpg" alt="Call to action" class="ca-bg img-fluid">
+        <div class="container">
+            <div class="action-card">
+                <div class="icon-div">
+                    <i class="fa-solid fa-video icon"></i>
+                </div>
+                <h5 class="heading">Video explaining platform benefits</h5>
+                <p class="p-text">Click Here to Watch the Video</p>
+                <a href="javascript:Void(0)" class="primary-btn">Watch Video</a>
+            </div>
+        </div>
+    </section>
+
     <!-- Testimonials Section  -->
     <section class="testimonials-sec section-padding">
         <div class="container">
@@ -281,6 +333,20 @@
             </div>
         </div>
     </section>
+
+    <!-- Free Trial Section  -->
+    <section class="sign-up-sec section-padding">
+        <div class="container">
+            <div class="text-content">
+                <h4 class="heading">sign up for a free trial or purchase a subscription</h4>
+                <div class="input-div">
+                    <input type="email" class="input-text" placeholder="Email Address">
+                    <button class="primary-btn">Send Email</button>
+                </div>
+            </div>
+        </div>
+    </section>
+
 
     <!-- Footer  -->
     <footer class="footer footer-dark">
