--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </head>
 <body>
     <nav class="navbar fg-navbar navbar-expand-xl" id="navMain">
-        <a class="navbar-brand" href="home-1.html"><img src="images/logo.png" alt="Flipguardian" class="brand-logo-img"></a>
+        <a class="navbar-brand" href="javascript:void(0)"><img src="images/logo.png" alt="Flipguardian" class="brand-logo-img"></a>
         <button type="button" class="btn navbar-toggler border-0 toggle-menu" onclick="toggleSlide()" id="slide-toggle">
             <span class="navbar-dash"></span>
             <span class="navbar-dash"></span>
