--- a/index.html
+++ b/index.html
@@ -647,32 +647,48 @@
     <!-- Footer  -->
     <footer class="footer footer-dark">
         <div class="container footer-container">
-            <div class="top-content">
-                <div class="links">
-                    <a href="javascript:void(0)" class="footer-link">Individual</a>
-                    <a href="javascript:void(0)" class="footer-link">Teams</a>
-                    <a href="javascript:void(0)" class="footer-link">Marketplace</a>
-                    <a href="javascript:void(0)" class="footer-link">Pricing</a>
-                    <a href="javascript:void(0)" class="footer-link">Resources</a>
-                    <a href="javascript:void(0)" class="footer-link">Contact Us</a>
+            <div class="row footer-row">
+                <div class="col-lg-5">
+                    <div class="logo-content">
+                        <a href="javascript:void(0)"><img src="images/logo.png" alt="Flipguardian" class="footer-logo-img"></a>
+                        <div class="p-text-div">
+                            <p class="p-text">FlipGuardian is strictly for personal/commercial use only. It can be used in conjunction with the content you/your company owns. It cannot be used on behalf of a 3rd party, including clients and/or customers. If you have clients who would benefit from our software we recommend creating a standalone account for each client as required or referring the platform to them to purchase directly via your affiliate link. Anyone found using their account in breach of this policy will forfeit their account.</p>
+                        </div>
+                    </div>
                 </div>
-                <div class="social-links">
-                    <a href="javascript:void(0)" class="footer-social-media-link"><i class="fa-brands fa-instagram icon"></i></a>
-                    <a href="javascript:void(0)" class="footer-social-media-link"><i class="fa-brands fa-x-twitter icon"></i></a>
-                    <a href="javascript:void(0)" class="footer-social-media-link"><i class="fa-brands fa-linkedin icon"></i></a>
-                    <a href="javascript:void(0)" class="footer-social-media-link"><i class="fa-brands fa-facebook icon"></i></a>
+
+                <div class="col-lg-3 col-md-6 left-padding">
+                    <h4 class="footer-title">Resources</h4>
+                    <div class="links">
+                        <a href="javascript:void(0)" class="footer-link">Individual</a>
+                        <a href="javascript:void(0)" class="footer-link">Teams</a>
+                        <a href="javascript:void(0)" class="footer-link">Pricing</a>
+                        <a href="javascript:void(0)" class="footer-link">Blog</a>
+                        <a href="javascript:void(0)" class="footer-link">Contact Us</a>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6">
+                    <h4 class="footer-title">Get In Touch</h4>
+                    <div class="get-in-touch-div">
+                        <div class="location-div">Lorem ipsum dolor sit amet consectetur adipisicing US, 382620</div>
+                        <a href="tel:999-999-9999" class="contact-div">
+                            <i class="fa-solid fa-phone icon"></i> 999-999-9999
+                        </a>
+                        <a href="mailto:info@website.com" class="contact-div">
+                            <i class="fa-solid fa-envelope icon"></i> info@website.com
+                        </a>
+                        <div class="social-links">
+                            <a href="javascript:void(0)" class="footer-social-media-link"><i class="fa-brands fa-instagram icon"></i></a>
+                            <a href="javascript:void(0)" class="footer-social-media-link"><i class="fa-brands fa-x-twitter icon"></i></a>
+                            <a href="javascript:void(0)" class="footer-social-media-link"><i class="fa-brands fa-linkedin icon"></i></a>
+                            <a href="javascript:void(0)" class="footer-social-media-link"><i class="fa-brands fa-facebook icon"></i></a>
+                        </div>
+                    </div>
                 </div>
             </div>
-            <div class="logo-content">
-                <a href="javascript:void(0)"><img src="images/logo.png" alt="Flipguardian" class="footer-logo-img"></a>
-                <div class="p-text-div">
-                    <p class="p-text">FlipGuardian is strictly for personal/commercial use only. It can be used in conjunction with the content you/your company owns. It cannot be used on behalf of a 3rd party, including clients and/or customers. If you have clients who would benefit from our software we recommend creating a standalone account for each client as required or referring the platform to them to purchase directly via your affiliate link. Anyone found using their account in breach of this policy will forfeit their account.</p>
-                    <p class="p-text">All trademarks and logos are the property of their respective owners. This site and FlipGuardian software are not associated, affiliated, endorsed, or sponsored by any business listed on this page nor have they been reviewed tested or certified by any other company listed on this page.</p>
-                </div>
-            </div>
-            <div class="copyright-div">
-                <p class="copyright-text">Copyright - <span class="color-primary">FlipGuardian.com</span> a Synthium Health, Inc. Website - All Rights Reserved</p>
-            </div>
+        </div>
+        <div class="copyright-div">
+            <p class="copyright-text">Copyright - <span class="color-primary">FlipGuardian.com</span> a Synthium Health, Inc. Website - All Rights Reserved</p>
         </div>
     </footer>
 
